micrometer POC concepts started. Some other work slipped in to this as well - normally I wouldn't mix the various POC work but this is a pet project so I'm letting some of the results dictate what is needed.